[ios] Adds RemovedDialog alert to ClearBrowsingTableVC

Implements showBrowsingHistoryRemovedDialog on
ClearBrowsingDataTableVC.

Screenshots:
https://drive.google.com/open?id=1uMyVYUqzdikwfP7V-ka0xD3ImteYbKO2
https://drive.google.com/open?id=1blljYShc0UYPVOWeuZszFpWk1z3Es8ke
https://drive.google.com/open?id=1J2r0pyARZtMOzjzffdL8B-S1ek8lBwXK

Bug: 868363
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ie0a20e07e64a3d14017e87edfa2dc05a874345f1
Reviewed-on: https://chromium-review.googlesource.com/1155479
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579507}
Former-commit-id: f60b696f611392218fb10d6643276e82305ce483